crates/reinhardt-db-macros/tests/ui/fail/missing_collection.stderr
error: missing required attribute 'collection'
  --> tests/ui/fail/missing_collection.rs:5:3
   |
5  | #[document(backend = "mongodb")]
   |   ^^^^^^^^
